# Smart_marketing_management_system_with_AI-powered_language_models

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/home_module/: googleGraph.py  urls.py  views.py
backend/llmarket/: asgi.py  settings.py  urls.py  wsgi.py
