[project]
name = "smart-marketing-management-system-with-ai-powered-language-models"
version = "0.1.0"
description = ""
authors = [
    {name = "dmarek03",email = "domarek@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
